fixed white space error in 404

--- a/css/app.css
+++ b/css/app.css
@@ -208,9 +208,9 @@ footer {
 
 /* 404 */
 .page_404 {
-    padding: 50px;
-    height: 100%;
+    padding: 64px;
     background: #fff;
+    background-size: cover;
 }
 
 .page_404 img {
